--- a/demoapp/demoapp.web/Views/Home/Index.cshtml
+++ b/demoapp/demoapp.web/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">welcome to DevOps+++++++++++++++++++learn and grow with skilss </h1>
+    <h1 class="display-4">welcome to DevOps+++++++++++++++++++learn and grow with skills </h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
